--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -1,1 +1,85 @@
-/* Placeholder for stylesheet */
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #FFFFFF;
+    font-family: "Source Sans Pro";
+    width: 100%;
+}
+
+header {
+    /* display: flex; */
+    background-image: url('images/background.png');
+    background-size: cover;
+    margin: 0px;
+    width: 100%;
+    height: 1055px;
+}
+
+/* Menu */
+
+#navigation-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    padding: 30px;
+}
+
+#logo-link {
+    width: 167px;
+    height: 29px;
+    margin-left: 10%;
+}
+
+#menu-container {
+    display: inline-flex;
+    justify-content: center;
+    gap: 55px;
+    height: 30px;
+    margin-right: 10%;
+}
+
+a.menu-link {
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: 'Source Sans Pro';
+}
+
+/* Banner */
+
+#banner-section {
+    width: 100%;
+    margin-top: 4%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+#banner {
+    display: flex;
+    flex-direction: column;;
+    align-items: center;
+    width: 75%;
+}
+
+#banner-heading {
+    color: #FFFFFF;
+    font-size: 120px;
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+    white-space: nowrap;
+    margin-right: 450px;
+    margin-top: 17%;
+}
+
+#banner-subheading {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    color: #FFFFFF;
+    gap: 75px;
+}
