--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -63,6 +63,7 @@ a.menu-link {
     display: flex;
     flex-direction: column;;
     align-items: center;
+    justify-content: center;;
     width: 75%;
 }
 
@@ -72,14 +73,35 @@ a.menu-link {
     font-weight: 700;
     font-family: "Source Sans Pro";
     white-space: nowrap;
-    margin-right: 450px;
-    margin-top: 17%;
+    margin-top: 7%;
+    margin-right:1%;
 }
 
 #banner-subheading {
     display: flex;
     justify-content: space-between;
     font-size: 16px;
+    font-weight: 700;
     color: #FFFFFF;
-    gap: 75px;
+    margin-top: -10%;
+    gap: 100px;
+    word-spacing: 75px;
 }
+
+#register-button {
+    background-color: #c271ff;
+    font-size: 14px;
+    width: 162px;
+    height: 44px;
+    border-radius: 22px;
+    font-family: "Source Sans Pro";
+    font-weight: 600;
+    color: #FFFFFF;
+    margin-top: 40px;
+}
+
+#pro-section {
+
+}
+
+
