--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -69,7 +69,7 @@ a.menu-link {
 
 #banner-heading {
     color: #FFFFFF;
-    font-size: 120px;
+    font-size: 125px;
     font-weight: 700;
     font-family: "Source Sans Pro";
     white-space: nowrap;
@@ -101,7 +101,59 @@ a.menu-link {
 }
 
 #pro-section {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
+#pro-heading {
+    color: #FFFFFF;
+    font-family: "Source Sans Pro";
+    margin-top: 200px;
+}
+
+#learn {
+    color: #C271FF;
+    font-weight: 700;
+    font-size: 34px;
+}
+
+#from-the-pros {
+    font-weight: 50;
+    font-size: 34px;
+}
+
+#pro-headshots {
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.pro-container {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.pro-img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+}
+
+.pro-name {
+    margin-top: 10px;
+    font-family: "Source Sans Pro";
+    font-size: 18px;
+    font-weight: 750;
+    color: #FFFFFF;
+}
+
+.pro-award {
+    font-size: 16px;
+    font-style: italic;
+    color: #FFFFFF;
 }
 
 
