--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -12,7 +12,7 @@ header {
     background-size: cover;
     margin: 0px;
     width: 100%;
-    height: 1055px;
+    height: 1150px;
 }
 
 /* Menu */
@@ -133,7 +133,7 @@ a.menu-link {
 
 .pro-container {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .pro-img {
@@ -154,6 +154,143 @@ a.menu-link {
     font-size: 16px;
     font-style: italic;
     color: #FFFFFF;
+    text-align: center;
+    font-family: "Source Sans Pro";
+    font-weight: 300;
+    line-height: 24px;
+}
+
+#testimonial-section {
+    width: 100%;
+}
+
+#testimonial {
+    width: 100%;
+    display: flex;
+    align-items:center;
+    background-color: #C271FF;
+    height: 392px;;
+}
+
+#quote-img {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    margin-left: 17%;
+}
+
+#quote-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    font-size: 22px;
+    font-family: "Source Sans Pro";
+    color:#FFFFFF;
+    margin-bottom: 2%;
+}
+
+#quote-author {
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+    font-size: 22px;
+    margin: 0;
+    margin-left: 3.5%;
+}
+
+#quote-title {
+    font-style:italic;
+    font-size: 22px;
+    margin: 0;
+    padding-top: 1%;
+    margin-left: 3.5%;
+}
+
+#tutorials-section {
+    width: 100%;
+    height: 565px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#tutorials-heading {
+    font-size: 32px;
+    font-family: "Source Sans Pro";
+    font-weight: 100;
+    margin-top: 7.5%;}
+
+#tutorials {
+    height: 450px;
+    width: 85%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 25px;
+}
+
+#popular {
+    color:#C271FF;
+    font-weight: 700;
 }
 
 
+.tutorial-card {
+    width: 255px;
+    height: 144px;
+    margin-bottom: 10%;
+}
+
+.tutorial-description {
+    font-family: "Source Sans Pro";
+    font-size: 14px;
+}
+
+.tutorial-author {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.author-details {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.author-img {
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+
+.author-name {
+    font-size: 14;
+    font-weight: 600;
+    color:#C271FF;
+}
+
+.tutorial-rating {
+    display: flex;
+    width: 255px;
+    justify-content: space-between;
+}
+
+.star-rating {
+    display: flex;
+    gap: 5px;
+}
+
+.star-img {
+    width: 15px;
+    height: 15px;
+}
+
+.tutorial-length {
+    font-size: 14px;
+    font-weight: 600;
+    color:#C271FF;
+    margin: 0px;
+    font-family: "Source Sans Pro"
+}
