--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -100,6 +100,8 @@ a.menu-link {
     margin-top: 40px;
 }
 
+/* 'Learn From the Pros' Section */
+
 #pro-section {
     display: flex;
     width: 100%;
@@ -160,6 +162,8 @@ a.menu-link {
     line-height: 24px;
 }
 
+/* Testimonial Section */
+
 #testimonial-section {
     width: 100%;
 }
@@ -206,12 +210,15 @@ a.menu-link {
     margin-left: 3.5%;
 }
 
+/* Tutorial Section */
+
 #tutorials-section {
     width: 100%;
     height: 565px;
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 60px;
 }
 
 #tutorials-heading {
@@ -235,11 +242,28 @@ a.menu-link {
     font-weight: 700;
 }
 
-
 .tutorial-card {
     width: 255px;
     height: 144px;
     margin-bottom: 10%;
+}
+
+.video-images {
+    position: relative;
+    width: 100%;
+}
+
+.tutorial-img {
+    width: 100%;
+    display: block;
+}
+
+.play-button {
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    top: 49px;
+    left: 35%;
 }
 
 .tutorial-description {
@@ -293,4 +317,87 @@ a.menu-link {
     color:#C271FF;
     margin: 0px;
     font-family: "Source Sans Pro"
+}
+
+#membership-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 502px;
+    background-color: #071629;
+}
+
+#free {
+    color:#C271FF;
+    font-weight: 700;
+}
+
+#membership-heading {
+    font-family: "Source Sans Pro";
+    margin-top: 3%;
+    color: #FFFFFF;
+    font-weight: 100;
+    font-size: 38px;
+}
+
+#membership-container {
+    width: 85%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 35px;
+}
+
+.membership-block {
+    margin-top: 20px;
+    height: 257px;
+    width: 200px;
+    line-height: 2;
+}
+
+#faq-container {
+
+}
+
+.membership-block-img {
+    margin-left: 75px;
+}
+
+.membership-block-title {
+    color: #FFFFFF;
+    font-family: "Source Sans Pro";
+    font-weight: 600px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.membership-block-description {
+    color: #FFFFFF;
+    text-align: center;
+}
+
+#reg-button-2 {
+    background-color: #C271FF;
+    font-size: 14px;
+    width: 162px;
+    height: 44px;
+    border-radius: 22px;
+    font-family: "Source Sans Pro";
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+#faq-section {
+    display: flex;;
+    align-items: center;
+    flex-direction: column;;
+    width: 920px;
+    height: 707px;
+}
+
+#faq-heading {
+    font-family: "Source Sans Pro";
+    font-size: 60px;
+    font-weight: lighter;
 }
