--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -218,7 +218,7 @@ a.menu-link {
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding-bottom: 60px;
+    padding-bottom: 150px;
 }
 
 #tutorials-heading {
@@ -319,6 +319,8 @@ a.menu-link {
     font-family: "Source Sans Pro"
 }
 
+/* Free Membership Section */
+
 #membership-section {
     display: flex;
     flex-direction: column;
@@ -338,7 +340,8 @@ a.menu-link {
     margin-top: 3%;
     color: #FFFFFF;
     font-weight: 100;
-    font-size: 38px;
+    font-size: 32px;
+
 }
 
 #membership-container {
@@ -354,10 +357,6 @@ a.menu-link {
     height: 257px;
     width: 200px;
     line-height: 2;
-}
-
-#faq-container {
-
 }
 
 .membership-block-img {
@@ -388,16 +387,88 @@ a.menu-link {
     color: #FFFFFF;
 }
 
+/* F.A.Q. Section */
+
 #faq-section {
     display: flex;;
     align-items: center;
     flex-direction: column;;
-    width: 920px;
-    height: 707px;
+    width: 100%;
+    height: 790px;
 }
 
 #faq-heading {
     font-family: "Source Sans Pro";
     font-size: 60px;
     font-weight: lighter;
+}
+
+#faq-container {
+    margin: 0 auto;
+}
+
+.faq-row {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 240px;
+    margin-bottom: 60px;
+}
+
+.faq-item {
+    width: 350px;
+    height: 242px;
+}
+
+.faq-question {
+    font-family: "Source Sans Pro";
+    font-weight: 700;
+    color: #071629;
+    font-size: 16px;
+}
+
+.faq-response {
+    font-family: "Source Sans Pro";
+    font-weight: 400;
+    font-size: 14px;
+    color: #071629;
+    line-height: 24px;
+}
+
+/* Footer */
+
+#footer-section {
+    background-color: #071629;
+    height: 249px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;;
+}
+
+#footer-container {
+    display: flex;
+    padding-top: 5%;;
+    width: 100%;;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#footer-logo {
+    margin-left: 13%;
+}
+
+#social-icons {
+    margin-right: 13%;
+    display: flex;
+    gap: 25px;
+}
+
+.copyright-text {
+    font-size: 12px;
+    font-weight: 400;
+    font-family: "Source Sans Pro";
+    color: rgba(255, 255, 255, 0.4);
+    text-align: center;
+    margin-top: 4%;
 }
