--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -45,6 +45,7 @@ a.menu-link {
     font-size: 12px;
     font-weight: 700;
     font-family: 'Source Sans Pro';
+    text-decoration: none;
 }
 
 /* Banner */
@@ -330,19 +331,19 @@ a.menu-link {
     background-color: #071629;
 }
 
+#membership-heading {
+    font-family: "Source Sans Pro";
+    margin-top: 3%;
+    color: #FFFFFF;
+    font-size: 32px;
+    font-weight: 50;
+}
+
 #free {
     color:#C271FF;
     font-weight: 700;
 }
 
-#membership-heading {
-    font-family: "Source Sans Pro";
-    margin-top: 3%;
-    color: #FFFFFF;
-    font-weight: 100;
-    font-size: 32px;
-
-}
 
 #membership-container {
     width: 85%;
@@ -383,7 +384,7 @@ a.menu-link {
     height: 44px;
     border-radius: 22px;
     font-family: "Source Sans Pro";
-    font-weight: 600;
+    font-weight: 500;
     color: #FFFFFF;
 }
 
